[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
jsfuckrs = { git = "https://github.com/cavemanjay/esoteric-playground.git", branch = "master" }
